# simple-modeling-experiment

./: .gitignore  .gitmodules  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
books/: .gitignore
configs/: holdout_template.json  kfold_template.json
configs/evaluators/: accuracy.json  mae.json  mse.json  rmse.json
configs/iris/: knn_holdout.json  knn_kfold.json  np_knn_holdout.json  tf_knn_holdout.json
configs/models/: knn.json
configs/titanic/: knn_kfold.json
modeling/: __main__.py
modeling/data/: __init__.py  iris_reader.py  titanic_reader.py
modeling/evaluator/: __init__.py  accuracy_evaluator.py  mean_error.py
modeling/image/: sift.py
modeling/models/: __init__.py  knn_model.py  template_model.py
modeling/training/: __init__.py  holdout_trainer.py  kfold_trainer.py
modeling/transform/: __init__.py  transformer.py
modeling/util/: __init__.py  json_loader.py
notes/: 02-07-2018 Iris Modeling.ipynb  02-14-2018 Linear Regression.ipynb  02-21-2018 Multiple Regression.ipynb  03-26-2018 Cython Into.ipynb  04-21-2018 Book study - Chap 2.ipynb  05-02-2018 DBSCAN Clustering.ipynb  05-07-2018 - SIFT - 01 Scale and Octave.ipynb  05-11-2018 - SIFT - 02 Gaussian Diff.ipynb  05-12-2018 - SIFT - 03 Keypoints.ipynb  07-06-2018 - Scraping Web Text.ipynb  07-13-2018 - Scraping more Medical.ipynb  07-16-2018 - Gradient Descent Impl.ipynb  Article - Scala NLP Example.ipynb  Dataset Selection - Analysis.ipynb
notes/Sentence Classifier/: 06-17-2018 - Scala Library Example.ipynb
raw_data/icdar/: .gitignore
raw_data/iris/: README.md  (+2 more)
(+35 files in other folders)
